--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@headlessui/vue": "^1.5.0",
+    "@heroicons/vue": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "autoprefixer": "^10.4.4",
