feat: validate auth

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vee-validate": "^4.5.11",
     "vite": "^2.9.2",
     "vue-router": "^4.0.14",
-    "vue-tsc": "^0.29.8"
+    "vue-tsc": "^0.29.8",
+    "yup": "^0.32.11"
   }
 }
