--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,12 @@
 		"jsx": "preserve",
 		"sourceMap": true,
 		"resolveJsonModule": true,
-		"isolatedModules": true,
+		"isolatedModules": false,
 		"esModuleInterop": true,
 		"lib": ["esnext", "dom"],
 		"paths": {
 			"@/*": ["./src/*"]
-		}
+		},
 	},
 	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
 	"references": [{ "path": "./tsconfig.node.json" }]
